Fixed overlapping text boxes.

--- a/src/sass/layout/_header.scss
+++ b/src/sass/layout/_header.scss
@@ -90,7 +90,7 @@
 		position: absolute;
 		top: 40%;
 		right: 5rem;
-		width: 40vw;
+		width: 50vw;
 		opacity: 0.55;
 		background-color: $color-grey-light-2;
 		color: $color-black;
